Fixed some layout issues

--- a/css/styles.css
+++ b/css/styles.css
@@ -229,9 +229,14 @@ ul {
   display: flex;
   font-weight: 500;
   justify-content: center;
-  margin: 1rem 0;
+  margin: 1rem auto;
+  max-width: max-content;
   padding: 1rem;
   white-space: nowrap;
+}
+
+.btn-wrap {
+  min-width: 100%;
 }
 
 .btn .icon {
@@ -273,6 +278,11 @@ ul {
   display: grid;
   gap: 3rem;
   justify-content: center;
+}
+
+.grid .image--centered {
+  max-width: 460px;
+  margin: 0 auto;
 }
 
 @media screen and (min-width: 1024px) {
@@ -322,9 +332,14 @@ ul {
 }
 
 /* Collapsibles */
+.collapsible {
+  margin-top: 1.5rem;
+}
+
 .collapsible__header {
   display: flex;
   justify-content: space-between;
+  cursor: pointer;
 }
 
 .collapsible__content {
